
  http://bugreports.qt-project.org/

Each of these identifiers can be entered in the bug tracker to obtain more
information about a particular change.


****************************************************************************
*                       Source incompatible changes                        *
****************************************************************************


- QSslCertificate::subjectInfo() and QSslCertificate::issuerInfo() now
  return a QStringList instead of a QString

- QSslCertificate::isValid() has been deprecated. Originally it only checked
  the certificate dates, but later checking for blacklisting was added. Now
  there's a more specific QSslCertificate::isBlacklisted() method.

- Unite clipping support has been removed from QPainter. The alternative is
  to unite QRegion's and using the result on QPainter.

- QLibrary::resolve() now returns a function pointer instead of a void
  pointer.

- QSslCertificate::alternateSubjectNames() is deprecated (but can be enabled
  via QT_DISABLE_DEPRECATED_BEFORE), use
  QSslCertificate::subjectAlternativeNames() instead.

- QLibraryInfo::buildKey() has been removed. Likewise, the QT_BUILD_KEY
  preprocessor #define has also been removed. The build-key is obsolete
  and is no longer necessary.

- QCoreApplication::translate() will no longer return the source text when
  the translation is empty. Use lrelease -removeidentical for optimization.

- QString and QByteArray constructors that take a size argument will now treat
  negative sizes to indicate nul-terminated strings (a nul-terminated array of
  QChar, in the case of QString). In Qt 4, negative sizes were ignored and
  result in empty QString and QByteArray, respectively. The size argument to
  those constructors now has a default value of -1, thus replacing the separate
  constructors that did the same.

- Qt::escape() is deprecated (but can be enabled via
  QT_DISABLE_DEPRECATED_BEFORE), use QString::toHtmlEscaped() instead.
